test/netlist/error/unused-bus.bop
Main(a, b:[2]) = s
where
  s = Id(a);
end where;
